Navigation styles added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  
+  <!-- Header Starts Here -->
+  <header id="header">
+    <!-- Menu -->
+    <nav class="header-menu container">
+      <div class="header_menu_logo">
+        <a href="#">influencer <span>tools</span></a>
+      </div>
+      <label for="header_menu_toggler" class="header_menu_toggler_icon">
+        <input type="checkbox" id="header_menu_toggler">
+        <i class="fas fa-bars"></i>
+      </label>
+      <ul class="navigation">
+        <li><a href="#">home</a></li>
+        <li><a href="#">products</a></li>
+        <li><a href="#">sign up</a></li>
+        <li><a href="#">log in</a></li>
+        <li><a href="#"><i class="fas fa-search"></i></a></li>
+        <li><a href="#"><i class="fas fa-cart-arrow-down"></i></a></li>
+      </ul>
+    </nav>
+  </header>
 </body>
 </html>
