Banner styles added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
         <li><a href="#"><i class="fas fa-cart-arrow-down"></i></a></li>
       </ul>
     </nav>
+
+    <!-- Banner Section Starts Here -->
+    <section class="container">
+      <div class="banner">
+        <div class="banner-left">
+          <h2>Choose your Career as <span>influencer</span></h2>
+          <p>We provide the best tools for Influencers to run the best campaigns. Tools that will give you the best results.</p>
+          <a href="#" class="banner-primary-btn primary-btn">buy now <i class="fas fa-long-arrow-alt-right"></i></a>
+        </div>
+        <div class="banner-right">
+          <img src="assets/media/img/live-music-vlogger.png" alt="Influencer">
+        </div>
+      </div>
+    </section>
   </header>
 </body>
 </html>
