Partners section styles added

--- a/index.html
+++ b/index.html
@@ -47,5 +47,30 @@
       </div>
     </section>
   </header>
+  <main>
+     <section class="partners container">
+       <div class="partners-logo">
+         <img src="assets/media/logos/Alibaba.svg" alt="Partner Logo">
+       </div>
+       <div class="partners-logo">
+         <img src="assets/media/logos/Amazon.svg" alt="Partner Logo">
+       </div>
+       <div class="partners-logo">
+         <img src="assets/media/logos/Daraz.pkLogo.svg" alt="Partner Logo">
+       </div>
+       <div class="partners-logo">
+         <img src="assets/media/logos/Rakuten.svg" alt="Partner Logo">
+       </div>
+       <div class="partners-logo">
+         <img src="assets/media/logos/Ebay.svg" alt="Partner Logo">
+       </div>
+       <div class="partners-logo">
+         <img src="assets/media/logos/Target.svg" alt="Partner Logo">
+       </div>
+       <div class="partners-logo">
+         <img src="assets/media/logos/Walmart.svg" alt="Partner Logo">
+       </div>
+     </section>
+  </main>
 </body>
 </html>
