Tools collection styles added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="banner-left">
           <h2>Choose your Career as <span>influencer</span></h2>
           <p>We provide the best tools for Influencers to run the best campaigns. Tools that will give you the best results.</p>
-          <a href="#" class="banner-primary-btn primary-btn">buy now <i class="fas fa-long-arrow-alt-right"></i></a>
+          <a href="#" class="banner-primary-btn primary-btn">buy now <i class="fas fa-cart-arrow-down"></i></a>
         </div>
         <div class="banner-right">
           <img src="assets/media/img/live-music-vlogger.png" alt="Influencer">
@@ -47,7 +47,10 @@
       </div>
     </section>
   </header>
-  <main>
+
+  <!-- Main Area Starts -->
+  <main class="main-sections">
+    <!-- Partners Section Starts Here -->
      <section class="partners container">
        <div class="partners-logo">
          <img src="assets/media/logos/Alibaba.svg" alt="Partner Logo">
@@ -69,6 +72,205 @@
        </div>
        <div class="partners-logo">
          <img src="assets/media/logos/Walmart.svg" alt="Partner Logo">
+       </div>
+     </section>
+
+     <!-- Tools Collections Section Starts Here -->
+     <section class="tools-collection container">
+       <h3>our tools <span>collection</span></h3>
+       <div class="tool-cards">
+        <div class="tool_card">
+          <img src="assets/media/img/tripod.png" alt="Tripod">
+          <h4>flex tripod</h4>
+          <p>$50.48</p>
+          <div class="tool_ratings">
+            <ul>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star-half-alt"></i>
+              </a></li>
+            </ul>
+            <span>4.99</span>
+          </div>
+          <div class="tools_extra_infos">
+            <p>Worldwide shifting</p>
+            <p>available</p>
+            <p>Buyers protection possible!</p>
+          </div>
+        </div>
+        <div class="tool_card">
+          <img src="assets/media/img/mic.png" alt="Mic">
+          <h4>microphone</h4>
+          <p>$130.25</p>
+          <div class="tool_ratings">
+            <ul>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star-half-alt"></i>
+              </a></li>
+            </ul>
+            <span>4.99</span>
+          </div>
+          <div class="tools_extra_infos">
+            <p>Worldwide shifting</p>
+            <p>available</p>
+            <p>Buyers protection possible!</p>
+          </div>
+        </div>
+        <div class="tool_card">
+          <img src="assets/media/img/airpod.png" alt="Airpod">
+          <h4>Airpod</h4>
+          <p>$99.25</p>
+          <div class="tool_ratings">
+            <ul>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star-half-alt"></i>
+              </a></li>
+            </ul>
+            <span>4.99</span>
+          </div>
+          <div class="tools_extra_infos">
+            <p>Worldwide shifting</p>
+            <p>available</p>
+            <p>Buyers protection possible!</p>
+          </div>
+        </div>
+        <div class="tool_card">
+          <img src="assets/media/img/drone.png" alt="Tripod">
+          <h4>drone</h4>
+          <p>$985.50</p>
+          <div class="tool_ratings">
+            <ul>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star-half-alt"></i>
+              </a></li>
+            </ul>
+            <span>4.99</span>
+          </div>
+          <div class="tools_extra_infos">
+            <p>Worldwide shifting</p>
+            <p>available</p>
+            <p>Buyers protection possible!</p>
+          </div>
+        </div>
+        <div class="tool_card">
+          <img src="assets/media/img/lights.png" alt="Tripod">
+          <h4>light setup</h4>
+          <p>$1299.00</p>
+          <div class="tool_ratings">
+            <ul>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star-half-alt"></i>
+              </a></li>
+            </ul>
+            <span>4.99</span>
+          </div>
+          <div class="tools_extra_infos">
+            <p>Worldwide shifting</p>
+            <p>available</p>
+            <p>Buyers protection possible!</p>
+          </div>
+        </div>
+        <div class="tool_card">
+          <img src="assets/media/img/setup.png" alt="Tripod">
+          <h4>photoshoot set</h4>
+          <p>$810.25</p>
+          <div class="tool_ratings">
+            <ul>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star-half-alt"></i>
+              </a></li>
+            </ul>
+            <span>4.99</span>
+          </div>
+          <div class="tools_extra_infos">
+            <p>Worldwide shifting</p>
+            <p>available</p>
+            <p>Buyers protection possible!</p>
+          </div>
+        </div>
+        <div class="tool_card">
+          <img src="assets/media/img/camera.png" alt="Tripod">
+          <h4>vlogging camera</h4>
+          <p>$2100.80</p>
+          <div class="tool_ratings">
+            <ul>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star-half-alt"></i>
+              </a></li>
+            </ul>
+            <span>4.99</span>
+          </div>
+          <div class="tools_extra_infos">
+            <p>Worldwide shifting</p>
+            <p>available</p>
+            <p>Buyers protection possible!</p>
+          </div>
+        </div>
+        <div class="tool_card">
+          <img src="assets/media/img/single-light.png" alt="Tripod">
+          <h4>green screen</h4>
+          <p>$20.48</p>
+          <div class="tool_ratings">
+            <ul>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star-half-alt"></i>
+              </a></li>
+            </ul>
+            <span>4.99</span>
+          </div>
+          <div class="tools_extra_infos">
+            <p>Worldwide shifting</p>
+            <p>available</p>
+            <p>Buyers protection possible!</p>
+          </div>
+        </div>
+        <div class="tool_card">
+          <img src="assets/media/img/action.png" alt="Tripod">
+          <h4>action camera</h4>
+          <p>$385.00</p>
+          <div class="tool_ratings">
+            <ul>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star"></i></a></li>
+              <li><a href="#"><i class="fas fa-star-half-alt"></i>
+              </a></li>
+            </ul>
+            <span>4.99</span>
+          </div>
+          <div class="tools_extra_infos">
+            <p>Worldwide shifting</p>
+            <p>available</p>
+            <p>Buyers protection possible!</p>
+          </div>
+        </div>
+       </div>
+       <div class="tools-btn">
+         <a href="#" class="primary-btn">see more <i class="fas fa-long-arrow-alt-right"></i></a>
        </div>
      </section>
   </main>
