--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
        </div>
      </section>
 
-     <!-- Tools Collections Section Starts Here -->
+     <!-- Tools Collection Section Starts Here -->
      <section class="tools-collection container">
        <h3>our tools <span>collection</span></h3>
        <div class="tool-cards">
@@ -274,5 +274,30 @@
        </div>
      </section>
   </main>
+  <!-- Contact Section Starts Here -->
+  <section class="contact container">
+    <h3>get in <span>touch</span></h3>
+    <div class="contact-area">
+      <div class="contact-map">
+        <h4>find us</h4>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14601.876882403501!2d90.41266672915069!3d23.801908203022396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c7ae2e36518f%3A0xa99fbb70a63e1639!2sBaridhara%2C%20Dhaka%201212!5e0!3m2!1sen!2sbd!4v1642246665923!5m2!1sen!2sbd" allowfullscreen="" loading="lazy"></iframe>
+      </div>
+      <div class="contact-form-area">
+        <h4>Tools enquery</h4>
+        <form action="#" class="contact_form">
+          <input type="text" placeholder="Name" required>
+          <input type="email" placeholder="Email" required>
+          <input type="tel" placeholder="Phone" required>
+          <input type="text" placeholder="Tool name" required>
+          <textarea cols="30" rows="4" placeholder="Your message..."></textarea>
+          <input type="submit" value="Send" class="primary-btn">
+        </form>
+      </div>
+    </div>
+   </section>
+  <!-- Footer Area Starts Here -->
+  <footer class="footer container">
+
+  </footer>
 </body>
 </html>
