Footer styles added

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="tool_card">
           <img src="assets/media/img/tripod.png" alt="Tripod">
           <h4>flex tripod</h4>
-          <p>$50.48</p>
+          <p>$59.50</p>
           <div class="tool_ratings">
             <ul>
               <li><a href="#"><i class="fas fa-star"></i></a></li>
@@ -289,15 +289,26 @@
           <input type="email" placeholder="Email" required>
           <input type="tel" placeholder="Phone" required>
           <input type="text" placeholder="Tool name" required>
-          <textarea cols="30" rows="4" placeholder="Your message..."></textarea>
+          <textarea cols="30" rows="4" placeholder="Your message"></textarea>
           <input type="submit" value="Send" class="primary-btn">
         </form>
       </div>
     </div>
    </section>
   <!-- Footer Area Starts Here -->
-  <footer class="footer container">
-
+  <footer class="footer">
+    <h3>influencer <span>tools</span></h3>
+    <p>copyright &copy; 2022 influencer tools</p>
+    <p>all rights reserved</p>
+    <div class="footer-social-icons">
+      <ul>
+        <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+        <li><a href="#"><i class="fab fa-vimeo"></i></a></li>
+      </ul>
+    </div>
   </footer>
 </body>
 </html>
