Media queries added to make the website responsive

--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
   <header id="header">
     <!-- Menu -->
     <nav class="header-menu container">
+      <!-- Mobile Menu Cart -->
+      <div class="mobile-menu-cart">
+        <a href="#"><i class="fas fa-cart-arrow-down"></i></a>
+      </div>
+      <!-- Mobile Menu Cart -->
       <div class="header_menu_logo">
         <a href="#">influencer <span>tools</span></a>
       </div>
+      <input type="checkbox" id="header_menu_toggler">
       <label for="header_menu_toggler" class="header_menu_toggler_icon">
-        <input type="checkbox" id="header_menu_toggler">
         <i class="fas fa-bars"></i>
       </label>
       <ul class="navigation">
