Fixed some code errors and the website is ready to go Live

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="mobile-menu-cart">
         <a href="#"><i class="fas fa-cart-arrow-down"></i></a>
       </div>
-      <!-- Mobile Menu Cart -->
+      <!-- Mobile Menu Cart Ends-->
       <div class="header_menu_logo">
         <a href="#">influencer <span>tools</span></a>
       </div>
